[DOCUMENTATION] Update stats

--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,7 @@
 		.eol {
 			background-color: red;
 		}
+		td:nth-child(2n), td:nth-child(3n) {text-align: right}
 	</style>
 </head>
 <body>
@@ -70,126 +71,131 @@
 	</thead>
 	<tfoot>
 		<tr>
-			<td>Total (as of December 5, 2016)<br>"oldest" datasample: Jan 7, 2014</td>
-			<td>316,304</td>
+			<td>Total (as of December 6, 2016)<br>"oldest" datasample: Nov 25, 2016</td>
+			<td>252,055</td>
 			<td>100.00%</td>
 		</tr>
 		</tfoot>
 	<tbody>
 		<tr class="eol">
 			<td>TYPO3 3.6 CMS</td>
-			<td>469</td>
-			<td>0.15%</td>
+			<td>336</td>
+			<td>0.13%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 3.7 CMS</td>
-			<td>1,622</td>
-			<td>0.51%</td>
+			<td>1,229</td>
+			<td>0.49%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 3.8 CMS</td>
-			<td>2,357</td>
-			<td>0.75%</td>
+			<td>1,523</td>
+			<td>0.60%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.0 CMS</td>
-			<td>4,283</td>
-			<td>1.58%</td>
+			<td>2,794</td>
+			<td>1.98%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.1 CMS</td>
-			<td>10,298</td>
-			<td>3.26%</td>
+			<td>6,292</td>
+			<td>2.50%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.2 CMS</td>
-			<td>22,563</td>
-			<td>7.13%</td>
+			<td>13,558</td>
+			<td>5.38%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.3 CMS</td>
-			<td>9,917</td>
-			<td>3.14%</td>
+			<td>6,008</td>
+			<td>2.38%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.4 CMS</td>
-			<td>20,697</td>
-			<td>6.54%</td>
+			<td>11,359</td>
+			<td>4.51%</td>
 		</tr>
 		<tr class="eol">
-			<td>TYPO3 4.5 CMS (previously <abbr title="long term support">LTS</abbr>)</td>
-			<td>130,393</td>
-			<td>41.22%</td>
+			<td>TYPO3 4.5 CMS (previously <abbr title="long term support">LTS</abbr>, also <abbr title="extended long term support">ELTS</abbr>)</td>
+			<td>74,833</td>
+			<td>29.69%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.6 CMS</td>
-			<td>10,998</td>
-			<td>3.48%</td>
+			<td>6,722</td>
+			<td>2.67%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 4.7 CMS</td>
-			<td>39,793</td>
-			<td>12.58%</td>
+			<td>22,849</td>
+			<td>9.07%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 6.0 CMS</td>
-			<td>5,385</td>
-			<td>1.70%</td>
+			<td>3,095</td>
+			<td>1.23%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 6.1 CMS</td>
-			<td>18,132</td>
-			<td>5.73%</td>
+			<td>9,792</td>
+			<td>3.88%</td>
 		</tr>
 		<tr class="supported">
 			<td>TYPO3 6.2 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>34,674</td>
-			<td>10.96%</td>
+			<td>73,791</td>
+			<td>29.28%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 7.0 CMS</td>
-			<td>122</td>
-			<td>0.04%</td>
+			<td>87</td>
+			<td>0.03%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 7.1 CMS</td>
-			<td>40</td>
-			<td>0.01%</td>
+			<td>143</td>
+			<td>0.06%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 7.2 CMS</td>
-			<td>17</td>
-			<td>0.01%</td>
+			<td>96</td>
+			<td>0.04%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 7.3 CMS</td>
-			<td>7</td>
-			<td>0.00%</td>
+			<td>45</td>
+			<td>0.02%</td>
 		</tr>
 		<tr class="supported">
 			<td>TYPO3 7.6 CMS (<abbr title="long term support">LTS</abbr>)</td>
-			<td>2060</td>
-			<td>0.65%</td>
+			<td>8019</td>
+			<td>3.18%</td>
+		</tr>
+		<tr class="eol">
+			<td>TYPO3 8.0 CMS</td>
+			<td>1</td>
+			<td>0.00%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 8.1 CMS</td>
-			<td>2</td>
+			<td>3</td>
 			<td>0.00%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 8.2 CMS</td>
-			<td>2</td>
+			<td>3</td>
 			<td>0.00%</td>
 		</tr>
 		<tr class="eol">
 			<td>TYPO3 8.3 CMS</td>
-			<td>2298</td>
-			<td>0.73%</td>
+			<td>8325</td>
+			<td>3.30%</td>
 		</tr>
 		<tr class="supported">
 			<td>TYPO3 8.4 CMS</td>
-			<td>175</td>
-			<td>0.06%</td>
+			<td>1152</td>
+			<td>0.46%</td>
 		</tr>
 	</tbody>
 </table>
@@ -250,7 +256,7 @@
 
 <h2>history</h2>
 <ul type="disc">
-	<li>Dec 05, 2016 - identified ~316,000 TYPO3 CMS installations ("oldest" datasample: Jan 7, 2014)</li>
+	<li>Dec 06, 2016 - identified ~252,000 TYPO3 CMS installations ("oldest" datasample: Nov 25, 2016)</li>
 	<li>Dec 03, 2014 - identified ~355,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
 	<li>May 11, 2014 - identified ~300,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
 	<li>Apr 01, 2014 - identified ~200,000 TYPO3 CMS installations ("oldest" datasample: Jul 17, 2013)</li>
@@ -278,7 +284,7 @@
 <h2>contributions</h2>
 
 <p>Spread the word, do not block useragent "T3census-Crawler/*" amongst your infrastructure, reduce number of items on my <a
-			href="http://www.amazon.de/registry/wishlist/P79V8LZAI9GE/">Amazon Wishlist</a> or flattr me <a href="https://flattr.com/submit/auto?fid=4z3gvx&url=http%3A%2F%2Ft3census.info" target="_blank"><img src="http://button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a>!
+			href="http://www.amazon.de/registry/wishlist/P79V8LZAI9GE/">Amazon Wishlist</a>, <a href="https://paypal.me/marcushh">paypal me</a> or <a href="https://flattr.com/submit/auto?fid=4z3gvx&url=http%3A%2F%2Ft3census.info" target="_blank"><img src="http://button.flattr.com/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0"></a>me!
 
 <h2>thanks</h2>
 
@@ -288,7 +294,7 @@
 
 <h2>contact</h2>
 
-<p><a href="mailto:marcus#exp2013@t3sec.info">Marcus Krause</a></p>
+<p>mail at <a href="mailto:marcus#exp2016@t3sec.info">Marcus Krause</a><br>slack channel <a href="https://typo3.slack.com/messages/t3census/">#t3census</a></p>
 
 <p>I'm open for suggestions what might be of interest additionally.</p>
 
