[TASK] Remove note regarding metagenerator.info project - seems to be dead

--- a/website/index.html
+++ b/website/index.html
@@ -46,11 +46,9 @@
 
 <p>This project tries to discover all <a href="http://typo3.org/">TYPO3 CMS</a> installations in the internet.</p>
 <p>Have you ever wondered how many TYPO3 CMS installations are existing? So did I.
-	<a href="http://www.cmscrawler.com/tool/TYPO3" title="">CMSCrawler</a> claims to have found 389,920 installations (as of November 19, 2014),
-	<a href="https://trends.builtwith.com/cms/TYPO3" title="builtWith">builtWith</a> claims to have found 433,853 installations (as of
-	November 19, 2014),
-	<a href="http://www.metagenerator.info/generator-details.html?ggid=4" title="">metagenerator.info</a> claims to have
-	found 52,061 installations (as of November 19, 2014).</p>
+	<a href="http://www.cmscrawler.com/tool/TYPO3" title="">CMSCrawler</a> claims to have found 312,955 installations (as of December 10, 2016),
+	<a href="https://trends.builtwith.com/cms/TYPO3" title="builtWith">builtWith</a> claims to have found 405,828 installations (as of
+	December 10, 2016).</p>
 
 <p>This is a project to have reliable and provable data. And with some background-knowledge in TYPO3, identification
 	should be done better than just examining meta tags.</p>
